added path comments, changes

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,6 +1,8 @@
 {
-	"token": "MTExMDkzMjg4MzY1MDExNzY0Mg.GKg69F.yRQ7DLKPW9e13dYrItd2tBAvOGIdKvSRUtXv8E",
 	"prefix": "!",
 	"log_file": "logs/bot_01.log",
-	"whitelist": ["YOUR_DISCORD_ID"]
+	"whitelist": {
+		"little_fox_e": "831902298938015745",
+		"minecraftletsplay2912": "761212453727895564"
+	}
 }
