get token from config.json

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,5 +1,6 @@
 {
 	"prefix": "!",
+	"token": "MTExMDkzMjg4MzY1MDExNzY0Mg.GKg69F.yRQ7DLKPW9e13dYrItd2tBAvOGIdKvSRUtXv8E",
 	"log_file": "logs/bot_01.log",
 	"whitelist": {
 		"little_fox_e": "831902298938015745",
