--- a/src/config/config.json
+++ b/src/config/config.json
@@ -2,5 +2,5 @@
 	"token": "MTExMDkzMjg4MzY1MDExNzY0Mg.GKg69F.yRQ7DLKPW9e13dYrItd2tBAvOGIdKvSRUtXv8E",
 	"prefix": "!",
 	"log_file": "logs/01.txt",
-	"whitelist": ["minecraftletsplay", "little_fox_e"]
+	"whitelist": ["minecraftletsplay2912", "little_fox_e"]
 }
