--- a/src/config/config.json
+++ b/src/config/config.json
@@ -2,6 +2,6 @@
 	"token": "MTExMDkzMjg4MzY1MDExNzY0Mg.GKg69F.yRQ7DLKPW9e13dYrItd2tBAvOGIdKvSRUtXv8E",
 	"prefix": "!",
 	"log_file": "logs/01.txt",
-	"whitelist": ["minecraftletsplay2912", "little_fox_e"],
+	"whitelist": ["minecraftletsplay2912", "minecraftletsplay2912#0", "little_fox_e", "little_fox_e#0"],
 	"api_key": "3bf700be7a794782a32c115056ab1ec1"
 }
