--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,7 +1,14 @@
 {
 	"token": "MTExMDkzMjg4MzY1MDExNzY0Mg.GKg69F.yRQ7DLKPW9e13dYrItd2tBAvOGIdKvSRUtXv8E",
-	"prefix": "!",
-	"log_file": "logs/01.txt",
+	
+	"api_key": "3bf700be7a794782a32c115056ab1ec1",
+
 	"whitelist": ["minecraftletsplay2912", "minecraftletsplay2912#0", "little_fox_e", "little_fox_e#0"],
-	"api_key": "3bf700be7a794782a32c115056ab1ec1"
+
+	"log_file": "logs/01.txt",
+
+	"download_folders": {
+		"pack": "/home/Discord-Bot/Storage/Modpacks",
+		"documents": "/home/Discord-Bot/Storage/Documents"
+	}
 }
