restructured commands like groups and sorted to different file to organize; updated requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-# import necessary libraries to run
-discord.py
-python-dotenv
-aiohttp
+discord.py>=2.3.2
+python-dotenv>=1.0.0
+requests>=2.31.0
+aiohttp>=3.8.5
+datetime>=5.2
