--- a/src/internal/data/hangman.jsonc
+++ b/src/internal/data/hangman.jsonc
@@ -1,4 +1,6 @@
 {
+    "words":
+    {
     "programming": {
         "easy": [
             "java",
@@ -150,4 +152,5 @@
             "pineapple"
         ]
     }
+}
 }
