--- a/src/internal/data/config.jsonc
+++ b/src/internal/data/config.jsonc
@@ -1,7 +1,7 @@
 {
-    "token": "TOKEN",
+    "token": "MTExMDkzMjg4MzY1MDExNzY0Mg.GKg69F.yRQ7DLKPW9e13dYrItd2tBAvOGIdKvSRUtXv8E",
 
-    "api_key": "KEY",
+    "api_key": "3bf700be7a794782a32c115056ab1ec1",
 
     "whitelist": ["minecraftletsplay2912", "minecraftletsplay2912#0", "little_fox_e", "little_fox_e#0"],
 
