--- a/src/internal/data/config.jsonc
+++ b/src/internal/data/config.jsonc
@@ -1,5 +1,5 @@
 {
-    "token": "TMTExMDkzMjg4MzY1MDExNzY0Mg.GKg69F.yRQ7DLKPW9e13dYrItd2tBAvOGIdKvSRUtXv8E",
+    "token": "MTExMDkzMjg4MzY1MDExNzY0Mg.GwbBrk.odJi-rYra4NRTBSA0SaLESKkpm5mpbpIk4SepA",
 
     "api_key": "3bf700be7a794782a32c115056ab1ec1",
 
