Reformatted some answers

--- a/src/internal/data/quiz.jsonc
+++ b/src/internal/data/quiz.jsonc
@@ -96,7 +96,7 @@
         {"question": "What is the main function of a router?", "answer": "To forward data packets between computer networks.", "id": 23},
         {"question": "Which company is known for its ThinkPad laptops?", "answer": "Lenovo", "id": 24},
         {"question": "What does HTTP stand for?", "answer": "HyperText Transfer Protocol", "id": 25},
-        {"question": "What is the primary function of a firewall?", "answer": "To monitor and control incoming and outgoing network traffic.", "id": 26},
+        {"question": "What is the primary function of a firewall?", "answer": "To monitor and control network traffic.", "id": 26},
         {"question": "Which company developed the first microprocessor?", "answer": "Intel", "id": 27},
         {"question": "What does SSD stand for?", "answer": "Solid State Drive", "id": 28},
         {"question": "What is the main purpose of an operating system?", "answer": "To manage computer hardware and software resources.", "id": 29},
@@ -104,20 +104,20 @@
         {"question": "What does DNS stand for?", "answer": "Domain Name System", "id": 31},
         {"question": "What does CPU stand for?", "answer": "Central Processing Unit", "id": 32},
         {"question": "Which company developed the first graphical web browser?", "answer": "Mosaic Communications Corporation", "id": 33},
-        {"question": "What is the purpose of the power supply unit (PSU) in a computer?", "answer": "To convert electricity from an outlet into usable power for the components.", "id": 34},
+        {"question": "What is the purpose of the power supply unit (PSU) in a computer?", "answer": "To convert electricity into usable power.", "id": 34},
         {"question": "What is the most common storage medium in modern smartphones?", "answer": "Flash storage (eMMC or UFS)", "id": 35},
-        {"question": "What does the term 'cloud computing' refer to?", "answer": "Storing and accessing data and applications over the internet instead of local storage.", "id": 36},
+        {"question": "What does the term 'cloud computing' refer to?", "answer": "Storing and accessing data and applications over the internet.", "id": 36},
         {"question": "What is the function of a GPU?", "answer": "To handle rendering of graphics and processing tasks related to visual output.", "id": 37},
         {"question": "What does BIOS stand for?", "answer": "Basic Input/Output System", "id": 38},
         {"question": "What is the main difference between an HDD and an SSD?", "answer": "HDDs are mechanical drives that use spinning disks, while SSDs use flash memory with no moving parts.", "id": 39},
         {"question": "Which company manufactures the Apple M1 chip?", "answer": "Apple", "id": 40},
-        {"question": "What does the term 'virtualization' refer to in computing?", "answer": "Creating virtual versions of resources, like servers, storage, or networks, on a physical machine.", "id": 41},
+        {"question": "What does the term 'virtualization' refer to in computing?", "answer": "Creating virtual versions of resources, like servers, on a physical machine.", "id": 41},
         {"question": "What is the purpose of a network switch?", "answer": "To connect multiple devices within a local area network and forward data packets between them.", "id": 42},
         {"question": "What is the main function of a modem?", "answer": "To modulate and demodulate digital data for transmission over analog communication lines.", "id": 43},
         {"question": "What is the purpose of a UPS in computing?", "answer": "To provide backup power in case of electrical outages or fluctuations.", "id": 44},
         {"question": "What is the main function of a sound card?", "answer": "To process and output audio signals from a computer.", "id": 45},
         {"question": "What is the purpose of a network interface card (NIC)?", "answer": "To connect a computer to a network and enable communication with other devices.", "id": 46},
-        {"question": "What is the main function of a barcode scanner?", "answer": "To read and decode information stored in barcodes for inventory tracking, sales transactions, and other applications.", "id": 47},
+        {"question": "What is the main function of a barcode scanner?", "answer": "To read and decode information stored in barcodes for inventory tracking and other applications.", "id": 47},
         {"question": "What is the purpose of a digital camera?", "answer": "To capture and store digital images and videos.", "id": 48},
         {"question": "What is the main function of a laser printer?", "answer": "To produce high-quality text and graphics by using a laser to create an electrostatic image on a drum.", "id": 49},
         {"question": "What is the purpose of a graphics tablet?", "answer": "To allow users to draw, paint, or input data using a stylus on a flat surface.", "id": 50},
