--- a/src/internal/data/config.jsonc
+++ b/src/internal/data/config.jsonc
@@ -1,7 +1,7 @@
 {
     "whitelist": ["minecraftletsplay2912", "minecraftletsplay2912#0", "little_fox_e", "little_fox_e#0"],
 
-    "log_file": "logs/01.txt",
+    "log_file_location": "/home/Dennis/Desktop/Storage/Logs",
 
     "download_folders": {
         "pack": "/home/Dennis/Desktop/Storage/Modpacks",
