Added DM recognition for logging and Server Recognition

--- a/src/internal/data/config.jsonc
+++ b/src/internal/data/config.jsonc
@@ -2,7 +2,8 @@
     "whitelist": [
         "minecraftletsplay2912",
         "minecraftletsplay2912#0",
-        "little_fox_e#0"
+        "little_fox_e#0",
+        "little_fox_e"
     ],
     "log_file_location": "/home/dennis/Desktop/Storage/Logs",
     "download_folders": {
