--- a/src/internal/data/config.jsonc
+++ b/src/internal/data/config.jsonc
@@ -9,5 +9,6 @@
     "download_folders": {
         "pack": "/home/dennis/Desktop/Storage/Modpacks",
         "documents": "/home/dennis/Desktop/Storage/Documents"
-    }
+    },
+    "LoggingActivated": true
 }
