Fixed File Rotator for logging

--- a/src/internal/data/config.jsonc
+++ b/src/internal/data/config.jsonc
@@ -10,5 +10,5 @@
         "pack": "/home/dennis/Desktop/Storage/Modpacks",
         "documents": "/home/dennis/Desktop/Storage/Documents"
     },
-    "LoggingActivated": true
+    "LoggingActivated": false
 }
