--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-discord.py>=2.3.2
-python-dotenv>=1.0.0
-aiohttp>=3.8.5
-requests>=2.31.0
-PyNaCl>=1.4.0
-asyncio>=3.4.3
-logging>=0.5.1.2
-DateTime>=5.4
-python-json-logger>=2.0.7
+discord.py==2.4.0
+PyNaCl==1.5.0
+python-dotenv==1.0.1
+aiohttp==3.11.11
+sympy==1.12
