--- a/src/internal/data/config.json
+++ b/src/internal/data/config.json
@@ -6,7 +6,8 @@
     "log_file_location": "/home/dennis/Desktop/Storage/Logs",
     "download_folders": {
         "pack": "/home/dennis/Desktop/Storage/Modpacks",
-        "documents": "/home/dennis/Desktop/Storage/Documents"
+        "documents": "/home/dennis/Desktop/Storage/Documents",
+        "logs": "/home/dennis/Desktop/Storage/Logs"
     },
     "LoggingActivated": true
 }
