Added DebugModeActive global variable to control if debug messages should be printed and logged and if the Component test should run on start/restart. Changed some logging.info to logging.debug Added / Command to toggle

--- a/src/internal/data/config.json
+++ b/src/internal/data/config.json
@@ -9,5 +9,6 @@
         "documents": "/home/dennis/Desktop/Storage/Documents",
         "logs": "/home/dennis/Desktop/Storage/Logs"
     },
-    "LoggingActivated": true
+    "LoggingActivated": true,
+    "DebugModeActivated": false
 }
