Refined Logic and tested it

--- a/src/internal/data/config.json
+++ b/src/internal/data/config.json
@@ -10,5 +10,5 @@
         "logs": "/home/dennis/Desktop/Storage/Logs"
     },
     "LoggingActivated": true,
-    "DebugModeActivated": false
+    "DebugModeActivated": true
 }
