--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,12 @@
 
 #Versions 
 
-discord.py==2.4.0 
-PyNaCl==1.5.0
-python-dotenv==1.0.1
-aiohttp==3.12.14
-sympy==1.12
+discord.py==2.6.3 
+PyNaCl==1.6.0
+python-dotenv==1.1.1
+aiohttp==3.12.15
+sympy==1.14.0
+asyncio==3.4.3
 
 # Full list of requirements:
 
@@ -34,3 +35,5 @@ datetime
 dotenv # From python-dotenv
 importlib
 builtins
+time
+re
