Published the Broadcast tool and changed Documents accordingly + Updated requirements.txt

--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,16 @@
 __pycache__/
 .venv/
 /src/internal/data/servers/
+*.pyc
 
 # Miscellaneous
-.DS_Store 
-Lavalink/
 ideas.txt
+broadcast.log
+tools/broadcast-system/announcements/
 logs/
-tools/
+*.log
 
 # IDE Folders
 .idea/
 .vscode/
+.DS_Store
