Small corrections / improvements for bot.py, logging_setup.py, public_commands.py and music_commands.py Updated player.py to support windows and Raspberry Pi and optimized configs for better compatibility

--- a/src/internal/data/config.json
+++ b/src/internal/data/config.json
@@ -10,7 +10,7 @@
     "documents": "/home/dennis/Desktop/Storage/Documents"
   },
   "LoggingActivated": true,
-  "DebugModeActivated": false,
+  "DebugModeActivated": true,
   "BotStatus": {
     "type": "listening",
     "text": "Listening to your commands."
